--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,1 +1,7 @@
-<p>cart works!</p>
+
+<div class="cart-wrapper">
+  <div class="overview-wrapper border-radius box-shadow">
+      <cart-item-list [items]="itemsInCart" [totalSum]="currentSumCart"></cart-item-list>
+      <cart-user-information></cart-user-information>
+  </div>
+</div>
