--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,10 +1,14 @@
 .homepage-wrapper {
     width: 100%;
     min-height: calc(100% - 42px);
+    min-width: 998px;
     display: flex;
     justify-content: center;
 }
 
 .products-wrapper {
-    min-height: 100%;
+  min-height: calc(100% - 16px);
+  background-color: var(--c7);
+  margin: 8px;
+
 }
