--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <div class="homepage-wrapper">
-    <div class="products-wrapper">
+  <div class="products-wrapper border-radius box-shadow">
         <product-list [products]="products"></product-list>
     </div>
 </div>
