--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -3,5 +3,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--c9);;
+    background-color: var(--c9);
+    padding: 5px;
+}
+
+button {
+    margin-left: 3px;
+    margin-right: 3px;
+    position: relative;
+}
+
+.cart-counter {
+    position: absolute;
+    top: -5px;
+    right: 1px;
+    font-size: 10px;
 }
