--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,12 @@ html, body {
 
 
 body {
+    min-height: 100%;
     background-color: var(--c6);
+}
+
+td, th {
+  border-bottom: unset;
 }
 
 .border-radius {
@@ -32,6 +37,27 @@ body {
 }
 
 .box-shadow {
-    -webkit-box-shadow: 0px 6px 4px 1px var(--c6); 
+    -webkit-box-shadow: 0px 6px 4px 1px var(--c6);
     box-shadow: 0px 6px 4px 1px var(--c6);
+}
+
+.button-small {
+  font-size: .8rem;
+  height: 2.8rem;
+  line-height: 2.8rem;
+  padding: 0 1.5rem;
+}
+
+.button-large {
+  font-size: 1.4rem;
+  height: 4.5rem;
+  line-height: 4.5rem;
+  padding: 0 2rem;
+}
+
+.icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
