--- a/src/app/components/product-list-entry/product-list-entry.component.html
+++ b/src/app/components/product-list-entry/product-list-entry.component.html
@@ -8,4 +8,9 @@
     <h5 class="product-description">
         {{product.description}}
     </h5>
+
+    <button class="button-small" (click)="onAddToCart()">
+      <div icon class="icon" iconName="cart-plus-fill" iconAlt="Plus Icon"></div>
+    </button>
+
 </div>
