--- a/src/app/components/cart-item-list/cart-item-list.component.html
+++ b/src/app/components/cart-item-list/cart-item-list.component.html
@@ -1,13 +1,14 @@
-<table>
+<table class="item-table">
   <tbody>
     <tr cart-item-list-entry *ngFor="let cartItem of items" [item]="cartItem" (editQuantity)="editQuantity(cartItem.product.id, $event)" (removeItem)="removeItem(cartItem.product.id)">
     </tr>
 
     <tr>
+      <td class="cart-sum-cell"></td>
       <td class="cart-sum-cell">Summe</td>
+      <td class="cart-sum-cell">{{totalSum}} EUR</td>
       <td class="cart-sum-cell"></td>
       <td></td>
-      <td class="cart-sum-cell">{{totalSum}} EUR</td>
     </tr>
   </tbody>
 </table>
