--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -8,19 +8,14 @@
 
 .overview-wrapper {
   min-height: 100%;
-  min-width: 700px;
+  min-width: 968px;
   padding: 16px;
   margin: 8px;
   height: 100%;
-
   background-color: var(--c7);
-
   display: flex;
-  flex-direction: row;
-}
-
-cart-item-list {
-  margin-right: auto;
+  flex-direction: column;
+  align-items: center;
 }
 
 cart-user-information {
