--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@
     --c7: #495057;
     --c8: #343A40;
     --c9: #212529;
+    --img-bg: #FFFFFF;
 }
 
 html, body {
@@ -25,7 +26,7 @@ html, body {
 
 body {
     min-height: 100%;
-    background-color: var(--c6);
+    background-color: var(--c4);
 }
 
 td, th {
@@ -37,8 +38,8 @@ td, th {
 }
 
 .box-shadow {
-    -webkit-box-shadow: 0px 6px 4px 1px var(--c6);
-    box-shadow: 0px 6px 4px 1px var(--c6);
+    -webkit-box-shadow: 5px 5px 2px -2px #343a40db;
+    box-shadow: 5px 5px 2px -2px #343a40db;
 }
 
 .button-small {
