Add detailed view for products

--- a/src/app/components/cart-item-list-entry/cart-item-list-entry.component.css
+++ b/src/app/components/cart-item-list-entry/cart-item-list-entry.component.css
@@ -13,7 +13,6 @@
   height: 120px;
 }
 
-
 .item-quantity {
   position: absolute;
   display: flex;
@@ -32,8 +31,11 @@
   width: 220px;
 }
 
-
 button {
   margin-left: 3px;
   margin-right: 3px;
+}
+
+.item-info:hover, .item-image:hover {
+  cursor: pointer;
 }
