Connected frontend with backend

--- a/src/app/components/cart-item-list-entry/cart-item-list-entry.component.html
+++ b/src/app/components/cart-item-list-entry/cart-item-list-entry.component.html
@@ -1,5 +1,5 @@
 <td class="item-image-wrapper box-shadow border-radius">
-  <img class="item-image" [src]="item.product.imageUrl" [routerLink]="['/product/' + item.product.id]">
+  <img class="item-image" [src]="base64Base + item.product.image" [routerLink]="['/product/' + item.product.id]">
 
 
   <span class="item-quantity">{{item.quantity}}</span>
