--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,7 +1,7 @@
 <div class="product-wrapper">
   <div class="product-detail-wrapper border-radius box-shadow">
       <div class="product-image-wrapper border-radius">
-          <img class="product-image" [src]="currentProduct?.imageUrl">
+          <img class="product-image" [src]="base64Base + currentProduct?.image">
       </div>
       <div class="product-infos">
           <h4 class="product-name">
@@ -11,7 +11,7 @@
               {{currentProduct?.description}}
           </p>
           <p class="product-price">
-              <span class="price-text">Preis: </span >{{currentProduct?.amount | number : '1.2-2'}} {{currentProduct?.currency}}
+              <span class="price-text">Preis: </span >{{currentProduct?.amount / 100 | number : '1.2-2'}} {{currentProduct?.currency}}
           </p>
 
           <button class="button cart-button" (click)="addToCart()">
