--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -1,6 +1,6 @@
 .cart-wrapper {
   width: 100%;
-  min-height: calc(100% - 42px);
+  min-height: 100%;
   min-width: 998px;
   display: flex;
   justify-content: center;
@@ -20,4 +20,10 @@
 
 cart-user-information {
   margin-left: 16px;
+}
+
+@media screen and (max-width: 1120px) {
+  .cart-wrapper {
+    margin-left: 75px;
+  }
 }
