--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -1,6 +1,6 @@
 .homepage-wrapper {
     width: 100%;
-    min-height: calc(100% - 42px);
+    min-height: 100%;
     min-width: 998px;
     display: flex;
     justify-content: center;
@@ -11,4 +11,10 @@
   background-color: var(--c7);
   margin: 8px;
 
+}
+
+@media screen and (max-width: 1120px) {
+  .homepage-wrapper {
+    margin-left: 75px;
+  }
 }
