--- a/src/app/components/product-detail/product-detail.component.css
+++ b/src/app/components/product-detail/product-detail.component.css
@@ -1,13 +1,13 @@
 .product-wrapper {
   width: 100%;
-  min-height: calc(100% - 42px);
+  min-height: 500px;
   min-width: 998px;
   display: flex;
   justify-content: center;
 }
 
 .product-detail-wrapper {
-  min-height: calc(100% - 16px);
+  min-height: 100%;
   min-width: 968px;
   background-color: var(--c7);
   margin: 8px;
@@ -19,7 +19,7 @@
 .product-image-wrapper {
   width: 600px;
   padding: 6px;
-  margin: 1rem;
+  margin: 16px;
   background-color: var(--img-bg);
 
   display: flex;
@@ -33,7 +33,7 @@
   justify-content: center;
 
   width: calc(100% - 600px);
-  margin: 1rem;
+  margin: 16px;
 }
 
 .product-image {
@@ -58,4 +58,10 @@
 
 .cart-button {
 
+}
+
+@media screen and (max-width: 1120px) {
+  .product-wrapper {
+    margin-left: 75px;
+  }
 }
