--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,6 +1,6 @@
 <div class="cart-wrapper">
   <div class="overview-wrapper border-radius box-shadow">
     <cart-item-list (changeItemQuantity)="changeQuantity($event.id, $event.amount)" (removeItemFromCart)="removeFromCart($event)" [items]="itemsInCart" [totalSum]="currentSumCart"></cart-item-list>
-    <cart-user-information [cartSum]="currentSumCart"></cart-user-information>
+    <cart-user-information #cartUserInformation (createOrder)="createOrder($event.cardNumber, $event.email)" [cartSum]="currentSumCart"></cart-user-information>
   </div>
 </div>
