--- a/src/app/components/order-detail/order-detail.component.css
+++ b/src/app/components/order-detail/order-detail.component.css
@@ -1,14 +1,14 @@
 .order-outer-wrapper {
   width: 100%;
   min-height: 100%;
-  min-width: 998px;
+  min-width: 650px;
   display: flex;
   justify-content: center;
 }
 
 .order-wrapper {
   min-height: 100%;
-  min-width: 968px;
+  min-width: 600px;
   padding: 16px;
   margin: 8px;
   height: 100%;
@@ -26,6 +26,39 @@
 .item-table {
   margin-bottom: 2px;
 }
+
+.item-image-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  padding-left: 1.5rem;
+
+  background-color: var(--img-bg);
+
+  margin-bottom: 6px;
+}
+
+.item-image {
+  height: 120px;
+}
+
+.item-quantity {
+  position: absolute;
+  display: flex;
+  top: 3px;
+  right: 3px;
+  padding: 3px;
+  margin: 2px;
+  width: 30px;
+  border-radius: 50%;
+  background-color: #495057a8;
+  align-items: center;
+  justify-content: center;
+}
+
 
 @media screen and (max-width: 1120px) {
   .order-outer-wrapper {
