Add loading animation when waitng for lambda func

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -2,5 +2,6 @@
   <div class="overview-wrapper border-radius box-shadow">
     <cart-item-list (changeItemQuantity)="changeQuantity($event.id, $event.amount)" (removeItemFromCart)="removeFromCart($event)" [items]="itemsInCart" [totalSum]="currentSumCart"></cart-item-list>
     <cart-user-information #cartUserInformation (createOrder)="createOrder($event.cardNumber, $event.email)" [cartSum]="currentSumCart"></cart-user-information>
+    <ngx-loading [show]="isLoading"></ngx-loading>
   </div>
 </div>
