--- a/src/app/components/product-detail/product-detail.component.css
+++ b/src/app/components/product-detail/product-detail.component.css
@@ -11,9 +11,9 @@
   min-width: 968px;
   background-color: var(--c7);
   margin: 8px;
-
   display: flex;
   flex-direction: row;
+  position: relative;
 }
 
 .product-image-wrapper {
