--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -18,5 +18,6 @@
               <div icon class="icon" iconName="cart-plus-fill" iconAlt="Plus Icon"></div>
           </button>
       </div>
+      <ngx-loading [show]="isLoading"></ngx-loading>
   </div>
 </div>
