--- a/src/app/components/homepage/homepage.component.css
+++ b/src/app/components/homepage/homepage.component.css
@@ -10,7 +10,7 @@
   min-height: calc(100% - 16px);
   background-color: var(--c7);
   margin: 8px;
-
+  position: relative;
 }
 
 @media screen and (max-width: 1120px) {
