--- a/src/app/components/homepage-components/product-list/product-list.component.html
+++ b/src/app/components/homepage-components/product-list/product-list.component.html
@@ -20,7 +20,7 @@
             {{number}}
         </button>
         <button class="button" (click)="nextPage()" [disabled]="this.currentPage + 1 > amountOfPages">
-            Nächste Seite
+            Weiter
         </button>
     </div>
 </div>
