--- a/src/app/components/admin-components/create-product/create-product.component.html
+++ b/src/app/components/admin-components/create-product/create-product.component.html
@@ -7,7 +7,7 @@
 
         <label for="amount">Preis
           <div class="tooltip">
-            <i class="icon" icon iconName="info-circle"></i>
+            <div class="icon" icon iconName="info-circle"></div>
             <div class="right">
               <div class="text-content">
                 <h6>Bitte Zahl kommagetrennt und mit zwei Nachkommastellen angeben!</h6>
@@ -22,7 +22,7 @@
 
         <label for="image">Bild
           <div class="tooltip">
-            <i class="icon" icon iconName="info-circle"></i>
+            <div class="icon" icon iconName="info-circle"></div>
             <div class="right">
               <div class="text-content">
                 <h6>Bild darf nicht größer als 300KB sein!</h6>
