--- a/src/app/components/ui-components/navbar/navbar.component.html
+++ b/src/app/components/ui-components/navbar/navbar.component.html
@@ -1,11 +1,15 @@
 <div class="navbar">
   <div class="button-wrapper border-radius">
     <button routerLink="/" class="button-small">
-      <div class="icon" icon iconName="house-fill" iconAlt="Home icon"></div>
+      <div class="icon" icon iconName="house-fill" iconAlt="Home icon" [width]="22"></div>
     </button>
     <button routerLink="/cart" class="button-small">
-      <div class="icon" icon iconName="cart-fill" iconAlt="Shopping cart icon"></div>
+      <div class="icon" icon iconName="cart-fill" iconAlt="Shopping cart icon" [width]="22"></div>
       <span class="cart-counter">{{itemsInCart}}</span>
     </button>
+    <button *ngIf="!isLoggedIn" (click)="onLoginModal()" class="button-small">
+      <div class="icon" icon iconName="person" iconAlt="Person icon" [width]="22"></div>
+    </button>
+
   </div>
 </div>
