--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<navbar></navbar>
+<navbar (loginModal)="toggleModal()"></navbar>
 <router-outlet></router-outlet>
+
+<modal (close)="toggleModal()" [ngClass]="{'visible': modalVisible, 'not-visible': !modalVisible}"></modal>
