--- a/src/app/components/admin-components/admin-overview/admin-overview.component.html
+++ b/src/app/components/admin-components/admin-overview/admin-overview.component.html
@@ -3,8 +3,11 @@
       <admin-outcome [outcome]="outcome" [currency]="currency"></admin-outcome>
 
       <div class="products">
-          <h3>Produkte</h3>
-          <admin-products (deleteProduct)="deleteProduct($event)" [products]="products"></admin-products>
+        <h3>
+          Produkte
+          <div [routerLink]="['/admin/create/product']" icon class="icon plus-icon" iconName="plus" iconAlt="Plus icon" [width]="20"></div>
+        </h3>
+        <admin-products (deleteProduct)="deleteProduct($event)" [products]="products"></admin-products>
       </div>
 
       <div class="orders">
