--- a/src/app/components/detail-components/product-detail/product-detail.component.css
+++ b/src/app/components/detail-components/product-detail/product-detail.component.css
@@ -10,7 +10,7 @@
   min-height: 100%;
   min-width: 968px;
   background-color: var(--c7);
-  margin: 8px;
+  margin: 0.5em;
   display: flex;
   flex-direction: row;
   position: relative;
@@ -33,7 +33,7 @@
   justify-content: center;
 
   width: calc(100% - 600px);
-  margin: 16px;
+  margin: 1em;
 }
 
 .product-image {
