Fix bug closing modal

--- a/src/app/components/ui-components/modal/modal.component.html
+++ b/src/app/components/ui-components/modal/modal.component.html
@@ -1,6 +1,9 @@
 <div (click)="onCloseModal()" class="modal-wrapper">
   <div class="modal-content">
-      <div (click)="onCloseModal()" icon class="icon close-icon" iconName="close" iconAlt="Schließen Icon" [width]="36"></div>
+
+    <div (click)="onCloseModal()">
+      <i (click)="onCloseModal()" icon class="icon close-icon" iconName="close" iconAlt="Schließen Icon" [width]="36"></i>
+    </div>
       <authentication (click)="$event.stopPropagation()" (login)="onCloseModal()"></authentication>
   </div>
 </div>
