--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <navbar (loginModal)="toggleModal()"></navbar>
 <router-outlet></router-outlet>
 
-<modal (close)="toggleModal()" [ngClass]="{'visible': modalVisible, 'not-visible': !modalVisible}"></modal>
+<modal (closeModal)="toggleModal()" [ngClass]="{'visible': modalVisible, 'not-visible': !modalVisible}"></modal>
