Add address to order

--- a/src/app/components/cart-components/cart/cart.component.html
+++ b/src/app/components/cart-components/cart/cart.component.html
@@ -1,7 +1,9 @@
 <div class="cart-wrapper">
   <div class="overview-wrapper border-radius box-shadow">
     <cart-item-list (changeItemQuantity)="changeQuantity($event.id, $event.amount)" (removeItemFromCart)="removeFromCart($event)" [items]="itemsInCart" [totalSum]="currentSumCart"></cart-item-list>
-    <cart-user-information #cartUserInformation (createOrder)="createOrder($event.cardNumber, $event.email)" [cartSum]="currentSumCart"></cart-user-information>
+    <cart-user-information #cartUserInformation
+      (createOrder)="createOrder($event.cardNumber, $event.email, $event.country, $event.state, $event.city, $event.zip, $event.address1, $event.address2, $event.address3 )" [cartSum]="currentSumCart">
+    </cart-user-information>
     <ngx-loading [show]="isLoading"></ngx-loading>
   </div>
 </div>
