--- a/src/app/components/cart-components/cart-user-information/cart-user-information.component.html
+++ b/src/app/components/cart-components/cart-user-information/cart-user-information.component.html
@@ -6,6 +6,28 @@
       <label for="cardNumber">Kartennummer</label>
       <input #cc id="cardNumber" type="tel" maxlength="20" formControlName="card" placeholder="Kartennummer" (keyup)="handleCreditCards()"/>
 
+      <label for="country">Land</label>
+      <input id="country" type="text" formControlName="country" placeholder="Land" maxlength="30"/>
+
+      <label for="state">Bundesland</label>
+      <input id="state" type="text" formControlName="state" placeholder="Bundesland" maxlength="30"/>
+
+      <label for="city">Stadt</label>
+      <input id="city" type="text" formControlName="city" placeholder="Stadt" maxlength="30"/>
+
+      <label for="zip">Postleitzahl</label>
+      <input id="zip" type="number" formControlName="zip" placeholder="Postleitzahl"/>
+
+      <label for="name">Name</label>
+      <input id="name" type="text" formControlName="name" placeholder="Name" maxlength="50"/>
+
+      <label for="address1">Adresse 1</label>
+      <input id="address1" type="text" formControlName="address1" placeholder="Adresse 1" maxlength="100"/>
+
+      <label for="address2">Adresse 2</label>
+      <input id="address2" type="text" formControlName="address2" placeholder="Adresse 2" maxlength="100"/>
+
+
       <button class="button" (click)="onSubmit()"> Jetzt {{cartSum / 100 | number : '1.2-2'}} Bezahlen</button>
   </fieldset>
 </form>
