--- a/src/app/components/detail-components/product-detail/product-detail.component.css
+++ b/src/app/components/detail-components/product-detail/product-detail.component.css
@@ -46,10 +46,11 @@
 
 .product-description {
   width: 300px;
+  line-break: anywhere;
 }
 
 .product-price {
-
+  line-break: anywhere;
 }
 
 .price-text {
